Sep2020--first draft.

--- a/pnsac/newsletter/article_EditorsNotes.tex
+++ b/pnsac/newsletter/article_EditorsNotes.tex
@@ -16,36 +16,27 @@
 
 \vspace{12pt}
 
-Putting out this edition of the Chronicle has been an example of great
-co-operation from members and non-members alike. Thanks are owed to a
-number of people. Our member Gary Whitten was instrumental in getting
-the necessary permission from Air Force Magazine to publish the
-"Diversion to Alert" article.  
+In this issue we are recognizing the completion of a very important step in the
+restoration of the North Star, namely, its Merlin engines, and our members who
+have volunteered with CASM to carry out the necessary work.  This is a very
+informative issue and I am sure we will all learn a great deal. I was not
+aware, until putting this edition together, that the Merlin designation was in
+keeping with the custom of Rolls Royce to name its aircraft engines after birds
+of prey. 
 
-%Allan Bowes, another member, suggested
-%that we should try to get the "Civil Merlins" article into an edition
-%of the Chronicle.  Following his suggestion we contacted Ben Dunnell,
-%the editor of Aeroplane Magazine. Through Ben's offices we were able to
-%secure permission to reprint this article.  The "Civil Merlins" was
-%part of a comprehensive 17 page Aeroplane Database article on the
-%Merlin. If any members wish to read the entire article it was published
-%in the July 2017 issue.
+The article, "Four Merlins" provides the reader with a detailed history of the
+restoration of these engines.   Due to its length, the article will be divided
+into two editions;  starting with engines number one and two in this edition;
+and three and four in the next edition. We are fortunate to have members who
+have had  lengthy involvement with this part of the project. Sadly one of those
+members passed away recently. Inside you will find a tribute to Tim Timmins by
+the President of our Association.
 
-In addition thanks go out to the other contributors, namely Richard
-Lodge, Garry Dupont,  Neil Raynor, and R\'{e}jean Demers. A special thanks
-to Bruce Gemmill who took the lead in putting together the progress report,
-which can be found in the Conservator's Corner section.
+We look forward to receiving your comments and suggestions regarding this
+edition and for future editions whether good, bad or ugly. Please use my email
+address located on the back page.
 
-Finally, I would like to thank Drew Hodge our stalwart publisher of this
-edition. We do appreciate receiving feedback from our readers including
-comments on the articles or suggestions for new articles. We are always on the
-lookout for content for the Chronicle so please do not hesitate to bring
-forward any ideas that you might have. As noted in the Conservator's Corner
-article the restoration of engine number 4 has been completed. Our next
-edition will focus on the engine restoration work so if you have any material
-or comments specific to that aspect of the restoration please let us know.
-Enjoy.
-
+Good reading.
 
 \vspace{12pt}
 
