--- a/pnsac/newsletter/article_Feature2.tex
+++ b/pnsac/newsletter/article_Feature2.tex
@@ -18,8 +18,9 @@ The earliest Merlins to operate in a civil mode were the Merlin T24 series,
 developed in 1944. These were single-stage twin-speed units similar to the
 Merlin 24s fitted to the RAF's Lancasters, but were modified to improve service
 life, and were fitted to Transport Command's Avro Yorks. Long-range transport
-operation entailed running at relatively low cruise powers for long periods —
-under these conditions the lower cylinder head temperatures caused deposits of
+operation entailed running at relatively low cruise powers for long
+periods---under these conditions the lower cylinder head temperatures caused
+deposits of
 lead oxide from the fuel, resulting in excessive spark plug fouling. To counter
 this, the Merlin T24/4 incorporated a charge heater to increase the inlet
 temperature. Post-war, the Merlin 500 series essentially comprised civil and
@@ -59,7 +60,7 @@ supposedly make a small profit at this level.
 What was undoubtedly true was that Rolls-Royce learned a great deal about the
 harsh realities of commercial operation in a short time. Hives is supposed to
 have said to TCA, "We didn't know the Merlin until you started operating it!"
-In the longer term, this paid off, TCA — later Air Canada — selecting
+In the longer term, this paid off, TCA---later Air Canada---selecting
 Rolls-Royce engines for its future fleet: Darts in Viscounts, Tynes in
 Vanguards, Conways in DC-8s, and RB211s in TriStars.
 
