--- a/pnsac/newsletter/article_MemberInterview.tex
+++ b/pnsac/newsletter/article_MemberInterview.tex
@@ -27,7 +27,7 @@ members. This edition, however, salutes all of our members who worked as
 volunteers on the restoration of the North Star engines namely:
 
 \begin{itemize}
-  \item Charles Baril 
+  \item Charles Baril
   \item John Corby (deceased)
   \item Ted Devey (deceased)
   \item Ed Hogan
@@ -40,7 +40,7 @@ volunteers on the restoration of the North Star engines namely:
   \item Ted Slack
   \item John Tasseron
   \item Bill Tate
-  \item Tim Timmins
+  \item Tim Timmins (deceased)
   \item Giuseppe Zanetti
 \end{itemize}
 
@@ -92,7 +92,7 @@ through an original parts manual to work out how to reassemble an item.  Life
 is certainly full of interesting surprises.
 
 \textbf{John Tasseron}
- 
+
 The list below is intended to give a brief overview of the various highlights
 that arose during my participation in the restoration of the second, third and
 fourth Merlin engines:
