--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -20,7 +20,8 @@ Association.
 Since March, restoration work on the aircraft has been suspended and the
 activities of the Association have been limited. We have, however, been keeping
 in touch with each other through the weekly Zoom meeting organized by the
-Museum's volunteer co-coordinator Cédric St.-Amour. This virtual meeting takes
+Museum's volunteer co-coordinator C\'edric St.-Amour. This virtual meeting
+takes
 place every Thursday at 10 AM EST; it is open to all our volunteers and any
 other PNSAC members who would like to join in.
 
@@ -62,6 +63,23 @@ with people whom I have never spoken to before. A definite bonus for me.
 \begin{footnotesize}
     \raggedleft PNSAC\\
 \end{footnotesize}
+
+\end{multicols}
+
+
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.78]{north_star_welcome_1.png}
+   %caption of the figure 
+%   \caption*{\small \em  Mike Hope and Bruce Gemmill assembled Prop 1ready to
+%install on Engine 1 October 26, 2008.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:tim}
+\end{figure}
+
+\begin{multicols}{2}
 
 % End of text.
 
