--- a/pnsac/newsletter/article_ProgReport.tex
+++ b/pnsac/newsletter/article_ProgReport.tex
@@ -6,7 +6,7 @@
 
 \title{Conservator's Corner}
 %\subtitle{PNS 2016 Status Update}
-\author{R\'{e}jean Demers, , AME---Conservator \/ Special Project Manager
+\author{R\'{e}jean Demers, AME---Conservator \/ Special Project Manager
 Canada Aviation \& Space Museum}
 %\author{Restoration Project Manager}
 
@@ -14,8 +14,8 @@ Canada Aviation \& Space Museum}
 
 %\section{Zen and the Art of Aircraft Restoration.}
 
-When touring the shops in the Museum’s Conservation wing, the engine shop is
-reserved for what is referred to as, the “Crown Jewel”. Guests are lead through
+When touring the shops in the Museum's Conservation wing, the engine shop is
+reserved for what is referred to as, the "Crown Jewel". Guests are lead through
 the corridor and the lights are flicked on to reveal a shining piece of
 aeronautical engineering and craftsmanship. The Merlin 622 engine, one of four
 such power plants, sits resplendent. Gasps and expressions of delight from
@@ -31,17 +31,17 @@ words simply scatter as embellishments to the enduring design and purpose,
 which cannot be hidden in all evidence of its greatness. 
 
 Referencing an Ottawa Citizen article dated Saturday Feb. 1st, 2003. We read of
-an effort to restore the Canadair North Star to a version of her “former self”
+an effort to restore the Canadair North Star to a version of her "former self"
 as PNSAC founder Robert Holmgren put it. A sad, sorry state at the time.
 Destitute to serve as a bird house to the starlings. No mention of any spells
 enacted to summon the aviation gods or mojo hand placed upon the yoke to stir
-the spirits which have tilled the air.  Yet today, she’s a Hangar Queen,
+the spirits which have tilled the air.  Yet today, she's a Hangar Queen,
 patiently awaiting final installation of engine \#4. Is this sorcery? No,
-simply the fourth iteration of the Project’s labour of love; Rolls-Royce Merlin
+simply the fourth iteration of the Project's labour of love; Rolls-Royce Merlin
 622, Serial \#309573. The task of accomplishing the finale to a four part, long
 haul repeat restoration of a power plant began in 2014. Looking back at power
 plant restoration cycles, we see the evolution of the Project North Star
-volunteer organization since the early 2000’s. The forming of Engine Shop crews
+volunteer organization since the early 2000's. The forming of Engine Shop crews
 and the establishing of Crew Chiefs. The coordination of daily grunt work of
 condition recording, treatment and reassembly of components. Today, members of
 the project continue to develop ideas, adapting to new technology, finding
@@ -51,11 +51,11 @@ unchanged throughout difficult times and challenges we have encountered.
 The Tech. log states: Engine installed on North Star 17515 on August 23rd, 1965
 at airframe Total Time of 19845.45 Hrs. with 1121 hours remaining in \#4
 position (4th to the right). The engine had previously flown on 17514 until
-April 30th, 1965 when a broken intake valve \@ \#1 cylinder, “B” bank
+April 30th, 1965 when a broken intake valve \@ \#1 cylinder, "B" bank
 necessitated a repair. Flipping through pages, various signatures, authorities,
 stamps and markings show evidence of a storied service life going back to 1948.
-Engines are shared among power plant “skeletons” which in turn, are shared
-across the fleet. This was one of the major design features of the “Power Egg”
+Engines are shared among power plant "skeletons" which in turn, are shared
+across the fleet. This was one of the major design features of the "Power Egg"
 as the promotional material of the day had put it, interchangeability and ease
 of maintenance. A glance at the log tells me this engine serial number served
 on North Stars 506, 510, 508 and 502 to name a few. The last remaining example
@@ -73,12 +73,11 @@ aforementioned Bristol Aero Industries Ltd. who worked at the overhaul shops
 when this engine was undergoing acceptance runs in the early to mid-sixties.
 Quickly, job experience and familiarity with the object was brought forward. A
 quick look under the cowling to reveal preserved markings and decals, evidence
-of original repair shop work was pointed out. “I probably worked on that job”
-he said. I understood at this point, how someone’s work, preserved in such a
+of original repair shop work was pointed out. "I probably worked on that job"
+he said. I understood at this point, how someone's work, preserved in such a
 way, could be of intangible value. The history coming around full-circle before
 my eyes, as the gentleman pointed out the ROLLS-ROYCE cast upon the rocker
-covers, saying “it was one of my first jobs, painting on those red letters”. 
-
+covers, saying "it was one of my first jobs, painting on those red letters". 
 
 These records, object qualities, historic log entries and our treatment reports
 all add up. We string together these bits of information to form longer chains
@@ -87,7 +86,7 @@ other areas of interest, or priorities, work carried out in the past helps
 maintain a continued relevance for others to pick-up where we left off. With
 such a long term project, setting the pace is just as important as taking a
 break now and then. Knowing that we had an impact and remembering the
-experiences we’ve shared can carry us through new challenges. It’s a pleasure
+experiences we've shared can carry us through new challenges. It's a pleasure
 for me to observe a new volunteer work towards acquiring the skills that may be
 passed on to others, like an old wizard speaking to his young apprentice. 
 
@@ -95,7 +94,7 @@ I encourage Project North Star members to communicate their interest in the
 project to the public. Generate their own records that may contribute to the
 history of the machine and the lives it affected. This newsletter, social media
 and other forms of reaching out to the public are excellent ways to remember
-one of Canada’s great contributions to air transport. With the tools at our
+one of Canada's great contributions to air transport. With the tools at our
 disposition, I would not hesitate to believe we can create many new and
 engaging experiences for the public to learn about the role this aircraft
 undertook while in service. Now, in continuation with a sense of national
