--- a/pnsac/newsletter/article_Special.tex
+++ b/pnsac/newsletter/article_Special.tex
@@ -1,79 +1,54 @@
+
 % Template PNSAC newsletter - Article
 % Language: Latex
 %
 
 % Head
 
-\title{70th Anniversary of first Canadian Non-stop Transcontinental Flight
-}
-\author{Roger Button}
+\title{Remembering Austin (Tim) Timmins 1928-2020}
+\author{Richard Lodge}
 
 \maketitle
 
-%\end{multicols}
-
-"If some countries have too much history, we have too much geography" said
-former Prime Minister William Lyon Mackenzie King, to the House of Commons in
-1936. He would not have known at the time that some thirteen years later an
-aviation event would take place that would help to shrink this geography.
-
-January 15, 1949 was a noticeable day in the history of Canadian aviation. On
-that day the first non-stop transcontinental flight was made. The aircraft was
-Royal Canadian Air Force North Star, registration number 17512. It was operated
-by 426 Thunderbird Squadron which was stationed at Dorval, QC. The aircraft was
-captained by F/O J.A.F. Jolicoeur and crewed by 14 members of the Experimental
-and Proving Establishment from RCAF Rockcliffe.
-
-\begin{figure}[ht!]
+\begin{figure}[htbp]
    \vspace{2em}
    \centering
    %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{nstar-212-scaled.png}
+   \includegraphics[scale=0.75]{tim-timmins.png}
    %caption of the figure 
-   \caption*{\small \em North Star 17512}
+   \caption*{\small \em Austin (Tim) Timmins.}
    %label of the figure, which has to correspond to \ref{}:
-   \label{fig:nstar-17515}
+   \label{fig:tim}
 \end{figure}
 
-While 17512 was relatively new to the RCAF it had been one of the earliest
-aircraft to roll off the Canadair Assembly line at Cartierville, QC in 1946.
-However, instead of going directly into service with the RCAF it, along with
-six other aircraft were loaned to Trans Canada Airlines (later to become Air
-Canada). It was was not until 1948 that the aircraft was taken on strength by
-426 Squadron.
+We were all very sorry to hear that our second President and also Life Member,
+Tim Timmins, had passed away on September 7th. Tim was a founding member of the
+Project North Star Association of Canada and one of its original directors. He
+was an active member of the small group of aviation enthusiasts who worked for
+many months with the Canada Aviation \& Space Museum to negotiate a
+groundbreaking arrangement to restore Canada's sole remaining North Star
+aircraft to a standard suitable for display in the Museum.
 
-The aircraft had a maximum range of 3,060 miles. This allowed 17512 to make the
-non-stop flight from Vancouver to Halifax a distance of 2,785 miles. The flight
-took eight hours and thirty two minutes. A year later the aircraft bested its
-time by making the same journey in eight hours and twenty five minutes.
+Tim became a dirty hands volunteer in the early years of the project and was
+involved in the often difficult and usually very dirty initial restoration work
+on the aircraft. He will have taken part in "bird nesting" when volunteers
+spent many hours removing years of bird nest debris from various parts of the
+aircraft.
 
-While the flight was an aviation first, it was also another step in the history
-of transcontinental travel in Canada. This started with arrival of the famous
-Scottish explorer Sir Alexander Mckenzie at the Pacific Ocean on July 22, 1793.
-He became the first European to cross North America north of Mexico. It was
-nearly one hundred years later that the next major leap in transcontinental
-travel took place with the completion of the Canadian Pacific Railway when the
-last spike was driven on November 7, 1885 at Eagle Pass, BC. In October 1920
-the Canadian Air Board staged a cross country mail demonstration but this
-involved a relay of five aircraft and a total flying time of 49 hours from
-Halifax to Vancouver. In 1939 Trans Canada Airlines flew the first commercial
-transcontinental flight from Toronto to Vancouver in 16 hours with four stops.
-The airline, however, didn't launch a non-stop transcontinental flight between
-the same airports until June 1, 1957. The flight also took eight hours and
-thirty two minutes using a Super Constellation. This was same time, to the
-minute, that the North Star took eight years earlier and on a longer route.
+Following the untimely death of our first President, Robert Holmgren in October
+2007, Tim agreed to become our second President. He held this position until
+June 2000 during which time he was instrumental in helping the Association move
+from a fledgling operation to a respected part of the Aviation Museum's
+volunteer team.
 
-
-
-
-
-
+Many of us will remember Tim's cheery smile and the long hours he spent talking
+to members of the public during the Museum's open days and public events. He
+always had anecdotes and stories to tell of his time in the RCAF as a navigator
+on the North Star. 
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
 \end{footnotesize}
-
-%\begin{multicols}{2}
 
 % End of text.
 
